# equity-analytics-pipeline

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
dbt/equity_transforms/: dbt_project.yml  profiles.yml
dbt/equity_transforms/models/: schema.yml
dbt/equity_transforms/models/marts/: dim_tickers.sql  fact_daily_prices.sql
dbt/equity_transforms/models/reporting/: rpt_sector_performance.sql  rpt_ticker_timeseries.sql
dbt/equity_transforms/models/staging/: stg_ohlcv.sql
images/: architecture_diagram.drawio
ingestion/: ingest.py  load_to_bq.py  requirements.txt
kestra/flows/: equity_pipeline.yml
terraform/: main.tf  variables.tf
