[project]
name = "equity-analytics-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "db-dtypes>=1.5.0",
    "dbt-bigquery>=1.8.0,<1.9.0",
    "dbt-core>=1.8.0,<1.9.0",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-storage>=2.14,<3.dev0",
    "jupyterlab>=4.5.6",
    "pandas>=2.3.3",
    "pandas-gbq>=0.34.0",
    "pyarrow>=23.0.1",
    "yfinance>=1.2.0",
]
